// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
<withOrientation
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "#2d2f7f",
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#2d2f7f"
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    padding={Object {}}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <IconButton
      accessibilityLabel="Back"
      onPress={[Function]}
      source={1}
    />
    <Text
      color="whiteColor"
      markdown={false}
      markdownStyle={Object {}}
      type="h2"
    >
      Center
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Right
    </Text>
  </ContentPadding>
</withOrientation>
`;

exports[`renders correctly with default props 1`] = `
<withOrientation
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "#2d2f7f",
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#2d2f7f"
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    padding={Object {}}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <Component
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    />
    <Component
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    />
  </ContentPadding>
</withOrientation>
`;

exports[`renders correctly with only onBack and rightElement 1`] = `
<withOrientation
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "#2d2f7f",
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#2d2f7f"
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    padding={Object {}}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <IconButton
      accessibilityLabel="Back"
      onPress={[Function]}
      source={1}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Right
    </Text>
  </ContentPadding>
</withOrientation>
`;

exports[`renders correctly with only title 1`] = `
<withOrientation
  accessibilityTraits={
    Array [
      "header",
    ]
  }
  style={
    Object {
      "backgroundColor": "#2d2f7f",
    }
  }
>
  <StatusBar
    animated={true}
    backgroundColor="#2d2f7f"
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    padding={Object {}}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "space-between",
      }
    }
  >
    <Component
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    />
    <Text
      color="whiteColor"
      markdown={false}
      markdownStyle={Object {}}
      type="h2"
    >
      Center
    </Text>
    <Component
      style={
        Object {
          "height": 48,
          "width": 48,
        }
      }
    />
  </ContentPadding>
</withOrientation>
`;
